--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^6.0.5
   cupertino_icons: ^1.0.5
-  arrow_pad: ^0.1.4
+  arrow_pad: ^0.2.0
   path_provider: ^2.0.11
-  screenshot: ^1.3.0
-  flutter_countdown_timer: ^4.1.0
+  screenshot: ^2.1.0
   intl: ^0.18.0
   ntp: ^2.0.0
   page_view_indicators: ^2.0.0
+  auto_size_text: ^3.0.0
+  google_mobile_ads: ^3.0.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -107,23 +109,10 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
-  fonts:
-    - family: DS-DIGIB
-      fonts:
-        - asset: assets/fonts/DS-DIGIB.ttf
-    - family: DiloWorld
-      fonts:
-        - asset: assets/fonts/DiloWorld.ttf
-    - family: FirstJob
-      fonts:
-        - asset: assets/fonts/FirstJob.ttf
-    - family: Atarian
-      fonts:
-        - asset: assets/fonts/Atarian.ttf
-
   assets:
     - assets/
     - assets/icons/topScreen/
     - assets/icons/bottomScreen/
     - assets/images/wall/
     - assets/images/initScreen/
+    - assets/config/.env
